WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259760
WebKit Media: Toggling fullscreen fails to work
https://bugs.webkit.org/show_bug.cgi?id=259760
Summary
WebKit Media: Toggling fullscreen fails to work
Richard Robinson
Reported
2023-08-02 19:22:34 PDT
rdar://113289306
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-08-02 19:24:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16336
EWS
Comment 2
2023-08-03 16:37:32 PDT
Committed
266558@main
(43da1fd1587a): <
https://commits.webkit.org/266558@main
> Reviewed commits have been landed. Closing PR #16336 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug