Cherry-pick 43da1fd1587a. rdar://problem/111534888

Cherry-pick 266558@main (43da1fd1587a). rdar://111534888

        WebKit Media: Toggling fullscreen fails to work
        https://bugs.webkit.org/show_bug.cgi?id=259760
        rdar://111534888

        Reviewed by Aditya Keerthi.

        The window resize handler is created when receiving the `will{Enter|Exit}FullScreen` notification,
        and is then invalidated as a result of `setFrameSize` being called. However, when transiting to/from
        element full screen, `setFrameSize` is called before the notification is posted, instead of after.
        This causes the handler to never be invalidated.

        Fix by creating the handler directly inside `setFrameSize`, and not rely on the full screen
        notifications at all. This is ok since `_holdResizeSnapshotWithReason` only returns a non-nil block
        when entering or exiting full screen, so it has no effect in other cases.

        No new tests, since all tests in `FullscreenVideoTextRecognition` already test this behavior in some
        configurations.

        * Source/WebKit/UIProcess/API/mac/WKView.mm:
        (-[WKView _web_windowWillEnterFullScreen]): Deleted.
        (-[WKView _web_windowWillExitFullScreen]): Deleted.
        * Source/WebKit/UIProcess/API/mac/WKWebViewMac.mm:
        (-[WKWebView _holdWindowResizeSnapshotWithReason:]):
        (-[WKWebView setFrameSize:]):
        (-[WKWebView _web_windowWillEnterFullScreen]): Deleted.
        (-[WKWebView _web_windowWillExitFullScreen]): Deleted.
        * Source/WebKit/UIProcess/mac/WebViewImpl.h:
        * Source/WebKit/UIProcess/mac/WebViewImpl.mm:
        (-[WKWindowVisibilityObserver startObserving:]):
        (-[WKWindowVisibilityObserver stopObserving:]):
        (-[WKWindowVisibilityObserver _windowWillEnterFullScreen:]): Deleted.
        (-[WKWindowVisibilityObserver _windowWillExitFullScreen:]): Deleted.
        (WebKit::WebViewImpl::windowWillEnterFullScreen): Deleted.
        (WebKit::WebViewImpl::windowWillExitFullScreen): Deleted.

        Canonical link: https://commits.webkit.org/266558@main

Identifier: 265870.293@safari-7616.1.27.11-branch